Fix overflow for small screens in login & signup pg

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -613,11 +613,14 @@ input[type="file"] {
     position: relative;
 }
 
+#title-container {
+    height: 50rem;
+}
+
 .faq-btn {
-    display: block;
-    width: 90%;
-    margin: 0 auto;
-    height: 4rem;
+    width: 100%;
+    height: 4.5rem;
+    display: inline-block;
     background-color: #ffffff;
     border: none;
     border-bottom: 0px;
@@ -625,12 +628,11 @@ input[type="file"] {
 }
 
 .faq-content {
-    width: 90%;
-    margin: 0 auto;
+    width: 100%;
+    height: 4.5rem;
     background-color: #fff;
     border: none;
     border-top: 0px;
-    padding: 0.6rem;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
